--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -301,7 +301,7 @@
   --purple-light-white: rgba(132, 90, 223, 0.25);
   --pink-light-white: rgba(250, 54, 230, 0.25);
 
-  --base: #fff;
+  --base: #fefefe;
   --brand: var(--primary-600);
   --button-secondary: var(--primary-50);
   --black: var(--dark-2);
@@ -321,7 +321,7 @@
   --button-secondary: var(--neutral-300); /* Cocoa shadow */
   --black: var(--base); /* typically still #000 or #1a1a1a */
   --white: var(--dark-2); /* updated soft light background */
-  --bg-color: var(--dark-1); /* main dark surface */
+  --bg-color: var(--neutral-700); /* main dark surface */
   --text-primary-light: var(--base);
   --text-secondary-light: #d9cfc6; /* Sandstone light */
   --text-secondary-dark: var(--dark-2);
@@ -407,6 +407,7 @@ html {
 
 body {
   background-color: var(--bg-color);
+    background: var(--bg-color);
   color: var(--text-secondary-light);
   font-family: "Inter", sans-serif;
   font-size: 1rem;
